[FEATURE] Implement initialization logic and return events with initialized data